--- a/index.html
+++ b/index.html
@@ -3,22 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=1280, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=1280, initial-scale=1.0">
   <title>Наша Почта Online</title>
 </head>
 
 <body>
   <div id="app"></div>
-
-
-  <script>
-  const zoom = window.innerWidth * 100 / 1280;
-
-  document.body.style.zoom = zoom + "%";
-
-  </script>
-
-
   <!-- built files will be auto injected -->
 </body>
 
