--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=1280, initial-scale=1.0">
-  <title>Наша Почта Online</title>
+  <title>East Express Logistics</title>
 </head>
 
 <body>
